15. Version 3.8.14 TM was missing one last translation
16. Version 3.8.15 TM flow corrected, as it still missed translations
17. Version 3.8.16 Converted import of glossary DeepL to utf-8, fixed a problem not loading the same glossary file twice
18. Version 3.8.18 Fixed several problems within TM function
19. Version 3.8.19 Fixed a problem within checkpage, checking an empty suggestion
20. Version 3.8.20 Fixed the problem of closing the last preview in the table with TM
21. Version 3.8.21 When performing TM from Formal, the suggestions were not found
22. Version 3.8.22 Sort of the Pre and Post textareas improved, Also improved the Firefox manifest to support the new manifest voor background script
                   Also moved closing of the editor window to a later time, as reports came in that lines were not saved
23. Version 3.8.23 Improved bulksave function, it left suggestions as waiting, but on the background they were saved
24. Version 3.8.24 TM was missing records due to a fault in the li search method, also remove sorting from the TM function as it disturbed the progress
25. Version 3.8.25 Added functionality to store the DeepL glossary in the indexedDB database, Export the data, import the data
26. Version 3.8.26 Fixed a problem when adding a record to the glossary, also added translations
27. Version 3.8.27 From the dropdown, the load glossary was not started
28. Version 3.8.28 Deleting from the modal was not working due to a translation that was missing. Renamed the translation for English from "en" to "en-gb"
29. Version 3.8.29 Added deleting glossary ID's at once, improved loading languages
30. Version 3.8.30 Added missing translations to the menu's, ExportCSV was not working, ImportCSV translation error
31. Version 3.8.31 Added selecting only the Locale records in the glossary modal, also added translation of delete and save button. Also rewrote DeepL translation to prevent CORS error